7.7.4
 - `transaction_base::for_each()` is now called `for_stream()`.
 - New `transaction_base::for_query()` is similar, but non-streaming.
 - New ways to query a single row!  `query01()` and `query1()`.
 - We now have 3 kinds of execution: "exec", "query", and "stream" functions.
 - Use C++23 `std::unreachable()` where available.
7.7.3
 - Fix up more damage done by auto-formatting.
 - New `result::for_each()`: simple iteration and conversion of rows.  (#528)
 - Add some missing headers in `<pqxx/pqxx>`.  (#551)
 - More strictness in `header-pre.hxx`/`header-post.hxx` checking.
 - Disallow nesting of `ignore-deprecated` blocks.
 - Deprecate `exec` functions' `desc` parameter.
 - Fix `placeholders` documentation.  (#557)
 - Strip `const` and references from `value_type`. (#558)
 - Get tests running on appveyor. (#560)
 - Fix broken nonblocking connection on Windows. (#560)
7.7.2
 - Fix up damage done by auto-formatting.
7.7.1
 - When you build libpqxx, configure the compiler's C++ version yourself!
 - Finally fix a long-standing silly warning in autogen.
 - Fix `digit_to_number` not being found on some comilers.  (#518, #519)
 - In audit mode, define `_FORTIFY_SOURCE` to enable some extra checks.
 - Make more functions `constexpr`.  Nothing particularly useful though.
 - Make more functions `noexcept`.
 - Move constructor & assignment for `result`.
 - Support LGTM.com and Facebook "infer" static analysis.
 - Deprecated `set_variable`/`get_variable` on `transaction_base`.
 - (Design unearthed warts in SQL variables, which were then fixed.)
 - Set/get session variables on `connection`: `set_session_var`/`get_var`.
 - Set/get local variables: execute SQL statements.
 - When using `select()`, include `<winsock2.h>` if available.
7.7.0
 - Fix `stream_to` for differing table/client encodings.  (#473)
 - Use `[[likely]]` & `[[unlikely]]` only in C++20, to silence warnings.
 - Fix clang "not a const expression" error in Windows.  (#472)